--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
         "rollup": "^3.20.2",
         "rollup-plugin-serve": "^2.0.2",
         "typescript": "^5.0.3"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "path": "^0.12.7",
+        "websocket": "^1.0.34"
     }
 }
